[project]
name = "safety-report-mcp-server"
version = "0.1.0"
description = "MCP Server for Safety Report Tools using FastMCP"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "pyautogui>=0.9.54",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "report.py", "cancel_button.png"]

[project.scripts]
auto_report = "server:mcp.run"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
